<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Spinner
            android:id="@+id/scategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/categorias_viaje"
             />

        <Button
            android:id="@+id/bedestinos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scategorias"
            android:layout_marginHorizontal="20dp"
            android:text="@string/explorar_destinos" />

        <Button
            android:id="@+id/bfavoritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bedestinos"
            android:layout_marginHorizontal="20dp"
            android:text="@string/favoritos" />

        <Button
            android:id="@+id/brecomendaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bfavoritos"
            android:layout_marginHorizontal="20dp"
            android:text="@string/recomendaciones" />

    </RelativeLayout>

</RelativeLayout>